--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>CSS Background</title>
+<title>Lavanya Vasupilli</title>
 <link rel="stylesheet" href="CSS_background.css">
 </head>
 <body>
@@ -17,3 +17,4 @@
     }
 
    </style>
+
